framec_tests/language_specific/rust/v3_mir/positive/transition_inline_semicolon_comment.frm
@target rust

system S {
    machine:
        $A {
            e() {
                -> $B(); // ok
            }
        }
        $B {
        }
}
