framec_tests/language_specific/rust/v3_mir/negative/transition_unknown_state.frm
@target rust

system S {
    machine:
        $A {
            e() {
                -> $ZZ();
            }
        }
}

